# ventis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: global_controller.yaml  policy.yaml
docker_container/FinanceAgent/: Dockerfile  local_controler_pb2.py  local_controller_frontend.py  redis_client.py
docker_container/MarketResearchAgent/: Dockerfile  global_controller_pb2.py  global_controller_pb2_grpc.py  local_controler_pb2_grpc.py  local_controller.py  market_agent.yaml  requirements.txt
examples/: finance_agent.py  market_agent.py  workflow.py
examples/agents/: finance_agent.yaml  vllm_agent.py  vllm_agent.yaml
examples/config/: global_controller.yaml
examples/workflows/: example_workflow.py
src/: future.py  stub_generator.py
src/controller/: global_controller.py  local_controller.py
src/controller/proto/: global_controller.proto  local_controler.proto
tests/: test_stateful_affinity.py
utils/: redis_client.py
ventis/: cli.py  future.py  stub_generator.py
ventis/controller/: global_controller.py  local_controller.py  local_controller_frontend.py
ventis/templates/agents/: vllm_agent.py
ventis/templates/config/: global_controller.yaml  policy.yaml
